api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api # Basé sur le label de l'application
  ports:
    - protocol: TCP
      port: 3000
