api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 'api.51.138.216.98.nip.io'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: api-service
                port:
                  number: 3000
